--- a/frontend/src/components/button/index.module.css
+++ b/frontend/src/components/button/index.module.css
@@ -13,7 +13,7 @@
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
     margin-bottom: 10px; /* Adjust margin between circles */
-    color: white; /* Set text color */
+    color: rgb(10, 0, 0); /* Set text color */
 }
 
 .circl {
