--- a/frontend/src/components/button/index.module.css
+++ b/frontend/src/components/button/index.module.css
@@ -5,15 +5,15 @@
 }
 
 .circle {
-    width: 100px; /* Adjust size of the circle */
-    height: 100px; /* Adjust size of the circle */
-    border-radius: 50%; /* Make it a circle */
-    background-color: #ff5733; /* Set background color */
+    width: 100px; 
+    height: 100px; 
+    border-radius: 50%; 
+    background-color: #ff5733;
     display: flex;
-    justify-content: center; /* Center horizontally */
-    align-items: center; /* Center vertically */
-    margin-bottom: 10px; /* Adjust margin between circles */
-    color: rgb(10, 0, 0); /* Set text color */
+    justify-content: center; 
+    align-items: center;
+    margin-bottom: 10px;
+    color: rgb(10, 0, 0); 
 }
 
 .circl {
@@ -25,7 +25,7 @@
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
     margin-bottom: 10px; /* Adjust margin between circles */
-    color: white; /* Set text color */
+    color: rgb(10, 0, 0); /* Set text color */
 }
 
 .circ {
@@ -36,5 +36,5 @@
     display: flex;
     justify-content: center; /* Center horizontally */
     align-items: center; /* Center vertically */
-    color: white; /* Set text color */
+    color: rgb(10, 0, 0); /* Set text color */
 }
